k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodeapp
  namespace: workshop
spec:
  hosts:
  - "*"
  gateways:
  - nodeapp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nodeapp.workshop.svc.cluster.local
        subset: v1
      weight: 30
    - destination:
        host: nodeapp.workshop.svc.cluster.local
        subset: v2
      weight: 70
